--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -3,17 +3,26 @@
 	font-family: Arial;
 }
 
+h1 {
+	text-align: center;
+}
+
+/* section headings in upper right corner */
 h4 {
 	/*border: 1px black solid;*/
 	border-bottom: 1px black solid;
 	border-left: 1px black solid;
 	width: 30%;
 	float: right;
-	margin: 0px;
 	text-align: center;
-	padding: 2px;
+	margin-top: -1.25em;
+	margin-right: -1em;
+	margin-bottom: -1em;
+	padding-top: 0.25em;
+	padding-bottom: 0.25em;
 }
 
+/* menu sections */
 div {
 	background-color: #ffccff;
 	margin-top: 10px;
@@ -21,7 +30,9 @@ div {
 	display: inline;
 	box-sizing: border-box;
 	float: left;
-	padding-left: 0.5em;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 1.25em;
 	margin: 1%;
 }
 
@@ -40,6 +51,7 @@ div {
 @media (min-width: 992px) {
 	div {
 	width: 31%;
+	height: 13em;
 }
 
 }
@@ -47,22 +59,20 @@ div {
 @media (min-width: 768px) and (max-width: 991px) {
 	div {
 		width: 48%;
+		height: 11em;
 	}
-	/*#first {
-		width: 40%;
-	}
-	#second {
-		width: 40%;
-	}*/
+
 	#third {
 		clear: both;
 		width: 98%;
+		height: 11em;
 	}
 }
 
 @media (max-width: 767px) {
 	div {
 		clear: both;
-		width: 100%;
+		width: 98%;
+		height: 11.5em;
 	}
 }
