--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -5,6 +5,7 @@
 
 h1 {
 	text-align: center;
+	font-size = 175%;
 }
 
 /* section headings in upper right corner */
@@ -20,6 +21,7 @@ h4 {
 	margin-bottom: -1em;
 	padding-top: 0.25em;
 	padding-bottom: 0.25em;
+	font-size = 125%;
 }
 
 /* menu sections */
@@ -52,8 +54,6 @@ div {
 	div {
 	width: 31%;
 	height: 13em;
-}
-
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
